<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:label="@string/lbl_title"
    tools:context=".ActivityMain" >

    <TextView
        android:id="@+id/lbl_key_phrase"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_key_phrase"
        android:textSize="18sp" />
        
    <EditText
        android:id="@+id/key_phrase"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_key_phrase" />

    <Button
        android:id="@+id/set_key_phrase"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="setKeyPhrase"
        android:text="@string/btn_set_key_phrase" />
    
    <CheckBox
        android:id="@+id/require_battery"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="setRequireCharge"
        android:text="@string/chk_require_charger" />

</LinearLayout>